all-in-one-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-build
spec:
  selector:
    matchLabels:
      app: cloud-build
  template:
    metadata:
      labels:
        app: cloud-build
    spec:
      containers:
      - name: hello
        image: image=gcr.io/poc-ni-rei/cloud-build
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  type: ClusterIP
  selector:
    app: cloud-build
  ports:
  - port: 8000 #My wish
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-build-deployment
spec:
  selector:
    matchLabels:
      app: cloud-build
  template:
    metadata:
      labels:
        app: cloud-build
    spec:
      containers:
      - name: cloud-build
        image: gcr.io/google-samples/cloud-build:0.2
        ports:
        - containerPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-ingress
spec:
  defaultBackend:
    service:
      name: cloud-build 
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /cloud-build
        pathType: ImplementationSpecific
        backend:
          service:
            name: cloud-build # domain-name
            port:
              number: 8080 # should be same as deployment port
